--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     send verfication email</string>
     <string name="email_account_exists_before_created">account can not be
         exists before it is created</string>
-    <string name="email_account_already_exists">cannot create existing account</string>
+    <string name="email_account_already_exists">The email address is already in use by another account.</string>
     <string name="email_account_can_not_be_verified_before_reply">users
     must reply verfication mail in order to be verified</string>
     <string name="email_account_reply_to_verfication_mail_message">please
