--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,42 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+
+    <!-- signin/signout messages -->
     <string name="signin_google_message">sign in using google provider </string>
     <string name="signin_facebook_message">sign in using facebook provider
     </string>
     <string name="signout_facebook_message">sign out using facebook
         provider</string>
     <string name="signout_google_message">sign out using google provider</string>
+
+
+    <!-- resources identifiers -->
     <string name="google_signin_options">gso</string>
     <string name="default_web_client_id">0x7f0e0050</string>
     <string name="activity_action_type">activity_action_type</string>
-    <string name="null_provider_error">provider was not initialized</string>
-    <string name="sign_in_exception_message">sign in method not supported for
-        this provider</string>
-    <string name="send_email_not_implemented_provider_exception">send
-        verfication method not supported for this provider</string>
-    <string name="provider_manager_provider_exception">AutProviderManager
-        .provider=null Did you forget to set current provider by
+
+
+    <!-- provider initializations exceptions -->
+    <string name="null_provider_exception">provider was not initialized</string>
+    <string name="null_provider_sign_in_exception">null provider cannot
+    sign in</string>
+    <string name="null_provider_on_activity_result_received_exception">null provider cannot
+    implement OnActivityResultReceived</string>
+    <string name="null_provider_send_email_exception">null provider cannot
+    send verfication email</string>
+
+
+    <!-- derived provider exceptions -->
+    <string name="base_provider_signin_not_implemented_exception">sign in method not
+        implemented for abstract provider</string>
+    <string name="base_provider_send_email_not_implemented_exception">send
+        verfication method not supported for abstract provider</string>
+
+
+    <!-- Email provider flow exceptions-->
+    <string name="email_account_exists_before_created_exception">account can not be
+        exists before it is created</string>
+    <string name="email_account_already_exists_exception">The email address is already in use by another account.</string>
+
+
+    <!-- authentication listener exceptions -->
+    <string name="null_authentication_listener_exception">an attempt to
+        register a null authentication listener. Did your target activity
+        implements AuthenticationListener?</string>
+
+
+    <!-- provider manager exceptions -->
+    <string name="provider_manager_curr_provider_not_initialized_exception">the current
+        provider of provider manager is not initialized. Did you forget to
+        set current provider by
         invoking setProvider(IAuthProvider provider) before calling
         this method ?</string>
-    <string name="email_provider_signin_exception">this overload for
-        signin is forbidden for email provider. User and passward are
-        needed in order to sign in using this provider</string>
-    <string name="sign_in_null_provider_exception">null provider cannot
-    sign in</string>
-    <string name="on_activity_result_received">null provider cannot
-    implement OnActivityResultReceived</string>
-    <string name="send_email_null_provider_exception">null provider cannot
-    send verfication email</string>
-    <string name="email_account_exists_before_created">account can not be
-        exists before it is created</string>
-    <string name="email_account_already_exists">The email address is already in use by another account.</string>
-    <string name="email_account_can_not_be_verified_before_reply">users
-    must reply verfication mail in order to be verified</string>
-    <string name="email_account_reply_to_verfication_mail_message">please
-        reply to verfication mail in order to register with this email account
-    </string>
-
-
-
 
 </resources>
